fix: Making search button on search bar visible
Changed the search button to change color to primary color during focus.
Set search bar height to make it consistent on mobile and PC.

--- a/css/NavBar.css
+++ b/css/NavBar.css
@@ -50,20 +50,35 @@
 .search-bar {
     display: flex;
     align-items: center;
-    justify-content: flex-end;
     background-color: var(--search-bg);
     border-radius: 5rem;
+    height: 2.25rem;
 }
 
 
 .search-input{
+    height: 100%;
     border-radius: inherit;
     background-color: inherit;
-    border:none
+    outline: none;
+    border:none;
 }
 
 .search-button{
     color: var(--search-text);
+}
+
+.search-input:focus{
+    box-shadow: none;
+}
+
+.search-bar:focus-within{
+    background-color: var(--button-bg);
+    box-shadow: 0 0 0 .25rem var(--card-border);
+}
+
+.search-bar:focus-within .search-button{
+    color: var(--color-secondary);
 }
 
 .nav-search-button{
